[package]
name = "cfddns"
version = "0.1.0"
authors = ["Gavin Daly <408519+gavdaly@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_json = "1.0.61"
async-std = { version = "1.9" }
surf = "2.1"